added changes in invoice

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -111,7 +111,7 @@
 
       </div>
       <div class="right-div">
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -167,7 +167,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card class="activity-card-employee">
             <div class="card-body">
@@ -701,7 +701,7 @@
             </mat-card-content>
           </mat-card>
         </div>
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -757,7 +757,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
@@ -1351,7 +1351,7 @@
 
       </div>
       <div class="right-div">
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -1407,7 +1407,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
@@ -2026,7 +2026,7 @@
             </mat-card-content>
           </mat-card>
         </div>
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -2082,7 +2082,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
@@ -3009,7 +3009,7 @@
           </mat-card>
         </div>
 
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -3065,7 +3065,7 @@
           </div>
 
 
-        </div>
+        </div> -->
 
 
         <div>
@@ -3878,7 +3878,7 @@
             </mat-card-content>
           </mat-card>
         </div>
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -3934,7 +3934,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
@@ -4589,7 +4589,7 @@
             </mat-card-content>
           </mat-card>
         </div>
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -4645,7 +4645,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
@@ -5198,7 +5198,7 @@
             </mat-card-content>
           </mat-card>
         </div>
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -5254,7 +5254,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
@@ -5904,7 +5904,7 @@
             </mat-card-content>
           </mat-card>
         </div>
-        <div style="margin-bottom: 20px;">
+        <!-- <div style="margin-bottom: 20px;">
           <div class="rating-card">
             <mat-card class="performanceratingcard">
               <div class="card-header">
@@ -5960,7 +5960,7 @@
           </div>
 
 
-        </div>
+        </div> -->
         <div>
           <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' "
             *ngIf="privilegeServ.hasPrivilege('RECENT_ACTIVITY_DATA')">
