--- a/src/app/usit/components/vendor-management/view-employee-data/view-employee-data.component.html
+++ b/src/app/usit/components/vendor-management/view-employee-data/view-employee-data.component.html
@@ -48,7 +48,7 @@
 
 
             <ng-container matColumnDef="SerialNum">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
+              <th mat-header-cell *matHeaderCellDef
                 sticky> S.No </th>
               <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
             </ng-container>
@@ -57,7 +57,7 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by fiscalYear" sticky>
                 Fiscal Year</th>
               <td mat-cell *matCellDef="let element">
-                <span class="company-recruiter-info"> {{element.fiscalYear}}</span>
+                <span > {{element.fiscalYear}}</span>
               </td>
             </ng-container>
 
