--- a/src/app/usit/components/sales/closure-list/closure-list.component.html
+++ b/src/app/usit/components/sales/closure-list/closure-list.component.html
@@ -1,171 +1,173 @@
 <div class="closure-container">
-    <ul class="breadcrumb">
-        <li><a (click)="navigateToDashboard()">Home</a></li>
-        <li class="last">{{ flag }}</li>
-        <li class="last">Closures</li>
-    </ul>
-    <div class="header-container mat-elevation-z1">
-        <span class="header-text">
-            Closures ({{ closureCount }})
-        </span>
+  <!-- Breadcrumb -->
+  <ul class="breadcrumb">
+    <li><a (click)="navigateToDashboard()">Home</a></li>
+    <li class="last">{{ flag }}</li>
+    <li class="last">Closures</li>
+  </ul>
 
-        <div class="closure-actions">
-            <div class="search-closure">
-                <input matInput type="text" class="search" placeholder="search closures" (keyup)="applyFilter($event)">
-            </div>
-        </div>
+  <!-- Header -->
+  <div class="header-container mat-elevation-z1">
+    <span class="header-text">Closures ({{ closureCount }})</span>
+
+    <div class="closure-actions">
+      <div class="search-closure">
+        <input matInput type="text" class="search" placeholder="Search closures" (keyup)="applyFilter($event)">
+      </div>
     </div>
-    <div id="table-container" class="table-wrapper">
-        <section class="mat-elevation-z8 closure-table-style">
-            <table mat-table [dataSource]="dataSource" oncopy="return false">
-                <!--- Note that these columns can be defined in any order.
-                    The actual rendered columns are set as a property on the row definition" -->
-    
-                <!-- SNo Column -->
-                <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef> S.No </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
-                </ng-container>
-    
-                <!-- Company Column -->
-                <ng-container matColumnDef="Company">
-                    <th mat-header-cell *matHeaderCellDef> Company </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.companyname}} </td>
-                </ng-container>
-    
-                <!-- Consultant Name Column -->
-                <ng-container matColumnDef="ConsultantName">
-                    <th mat-header-cell *matHeaderCellDef> Consultant Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.consultantname|titlecase}} </td>
-                </ng-container>
-    
-                <!-- Consultant Email Column -->
-                <ng-container matColumnDef="ConsultantEmail">
-                    <th mat-header-cell *matHeaderCellDef> ConsultantEmail </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.consultantemail}} </td>
-                </ng-container>
-    
-                <!-- Contact Column -->
-                <ng-container matColumnDef="Contact">
-                    <th mat-header-cell *matHeaderCellDef> Contact </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.contactnumber}} </td>
-                </ng-container>
-    
-                <!-- Visa Column -->
-                <ng-container matColumnDef="Visa">
-                    <th mat-header-cell *matHeaderCellDef> Visa </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.visa_status}} </td>
-                </ng-container>
-    
-                <!-- Visa Validity Column -->
-                <ng-container matColumnDef="VisaValidity">
-                    <th mat-header-cell *matHeaderCellDef> Visa Validity </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.visavalidity}} </td>
-                </ng-container>
-    
-                <!-- Client Column -->
-                <ng-container matColumnDef="Client">
-                    <th mat-header-cell *matHeaderCellDef> Client </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.endclient}} </td>
-                </ng-container>
-    
-                <!-- Impl Partner Column -->
-                <ng-container matColumnDef="ImplPartner">
-                    <th mat-header-cell *matHeaderCellDef> Impl Partner </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.implpartner}} </td>
-                </ng-container>
-    
-                <!-- Vendor Column -->
-                <ng-container matColumnDef="Vendor">
-                    <th mat-header-cell *matHeaderCellDef> Vendor </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.vendor}} </td>
-                </ng-container>
-    
-                <!-- Recruiter Column -->
-                <ng-container matColumnDef="Recruiter">
-                    <th mat-header-cell *matHeaderCellDef> Recruiter </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.recruiter}} </td>
-                </ng-container>
-    
-                <!-- Rate Type Column -->
-                <ng-container matColumnDef="RateType">
-                    <th mat-header-cell *matHeaderCellDef> Rate Type </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.ratetype}} </td>
-                </ng-container>
-    
-                <!-- Rate Column -->
-                <ng-container matColumnDef="Rate">
-                    <th mat-header-cell *matHeaderCellDef> Rate </th>
-                    <td mat-cell *matCellDef="let element"> {{ NumericValue(element?.submissionrate)}} </td>
-                </ng-container>
-    
-                <!-- Employee Column -->
-                <ng-container matColumnDef="Employee">
-                    <th mat-header-cell *matHeaderCellDef> Employee </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.pseudoname}} </td>
-                </ng-container>
-    
-                <tr>
-                    <tbody>
-                        <!-- Rate From Vendor Column -->
-                        <ng-container matColumnDef="RateFromVendor">
-                            <th mat-header-cell *matHeaderCellDef> Rate From Vendor </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.billratevendor}} </td>
-                        </ng-container>
-    
-                        <!-- Rate To Consultant Column -->
-                        <ng-container matColumnDef="RateToConsultant">
-                            <th mat-header-cell *matHeaderCellDef> Rate To Consultant </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.payrateconsultant}} </td>
-                        </ng-container>
-    
-                        <!-- Billing Cycle Column -->
-                        <ng-container matColumnDef="BillingCycle">
-                            <th mat-header-cell *matHeaderCellDef> Billing Cycle </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.billingcycle}} </td>
-                        </ng-container>
-    
-                        <!-- Payment Cycle Column -->
-                        <ng-container matColumnDef="PaymentCycle">
-                            <th mat-header-cell *matHeaderCellDef> Payment Cycle </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.paymentcycle}} </td>
-                        </ng-container>
-    
-                        <!-- Project Start Date Column -->
-                        <ng-container matColumnDef="ProjectStartDate">
-                            <th mat-header-cell *matHeaderCellDef> Project Start Date </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.projectstartdate}} </td>
-                        </ng-container>
+  </div>
 
-                         <!-- Project Start Date Column -->
-                         <ng-container matColumnDef="ProjectEndDate">
-                            <th mat-header-cell *matHeaderCellDef> Project End Date </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.projectendtdate}} </td>
-                        </ng-container>
-    
-                        <!-- Vendor AR Contact Column -->
-                        <ng-container matColumnDef="VendorArContact">
-                            <th mat-header-cell *matHeaderCellDef> Vendor AR Contact </th>
-                            <td mat-cell *matCellDef="let element"> {{element?.vendorarphonenumber}} </td>
-                        </ng-container>
-    
-                    </tbody>
-                </tr>
-                <!-- table columns ends  -->
-                <!-- table ROW -->
-                <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
-            </table>
-        </section>
-        <hr>
-    </div>
+  <!-- Table -->
+  <div id="table-container" class="table-wrapper">
+    <section class="mat-elevation-z8 closure-table-style">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" oncopy="return false">
 
-    <!-- paginator -->
+        <!-- SNo -->
+        <ng-container matColumnDef="SerialNum">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> S.No </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.serialNum }} </td>
+        </ng-container>
+
+        <!-- Company -->
+        <ng-container matColumnDef="Company">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.companyname }} </td>
+        </ng-container>
+
+        <!-- Consultant Name -->
+        <ng-container matColumnDef="ConsultantName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultant Name </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.consultantname | titlecase }} </td>
+        </ng-container>
+
+        <!-- Consultant Email -->
+        <ng-container matColumnDef="ConsultantEmail">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultant Email </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.consultantemail }} </td>
+        </ng-container>
+
+        <!-- Contact -->
+        <ng-container matColumnDef="Contact">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Contact </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.contactnumber }} </td>
+        </ng-container>
+
+        <!-- Visa -->
+        <ng-container matColumnDef="Visa">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Visa </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.visa_status }} </td>
+        </ng-container>
+
+        <!-- Visa Validity -->
+        <ng-container matColumnDef="VisaValidity">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Visa Validity </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.visavalidity }} </td>
+        </ng-container>
+
+        <!-- Client -->
+        <ng-container matColumnDef="Client">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Client </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.endclient }} </td>
+        </ng-container>
+
+        <!-- Impl Partner -->
+        <ng-container matColumnDef="ImplPartner">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Impl Partner </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.implpartner }} </td>
+        </ng-container>
+
+        <!-- Vendor -->
+        <ng-container matColumnDef="Vendor">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Vendor </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.vendor }} </td>
+        </ng-container>
+
+        <!-- Recruiter -->
+        <ng-container matColumnDef="Recruiter">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Recruiter </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.recruiter }} </td>
+        </ng-container>
+
+        <!-- Rate Type -->
+        <ng-container matColumnDef="RateType">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate Type </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.ratetype }} </td>
+        </ng-container>
+
+        <!-- Rate -->
+        <ng-container matColumnDef="Rate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
+          <td mat-cell *matCellDef="let element"> {{ NumericValue(element?.submissionrate) }} </td>
+        </ng-container>
+
+        <!-- Employee -->
+        <ng-container matColumnDef="Employee">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Employee </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.pseudoname }} </td>
+        </ng-container>
+
+        <!-- Rate From Vendor -->
+        <ng-container matColumnDef="RateFromVendor">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate From Vendor </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.billratevendor }} </td>
+        </ng-container>
+
+        <!-- Rate To Consultant -->
+        <ng-container matColumnDef="RateToConsultant">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate To Consultant </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.payrateconsultant }} </td>
+        </ng-container>
+
+        <!-- Billing Cycle -->
+        <ng-container matColumnDef="BillingCycle">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Billing Cycle </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.billingcycle }} </td>
+        </ng-container>
+
+        <!-- Payment Cycle -->
+        <ng-container matColumnDef="PaymentCycle">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Payment Cycle </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.paymentcycle }} </td>
+        </ng-container>
+
+        <!-- Project Start Date -->
+        <ng-container matColumnDef="ProjectStartDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Start Date </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.projectstartdate }} </td>
+        </ng-container>
+
+        <!-- Project End Date -->
+        <ng-container matColumnDef="ProjectEndDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Project End Date </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.projectendtdate }} </td>
+        </ng-container>
+
+        <!-- Vendor AR Contact -->
+        <ng-container matColumnDef="VendorArContact">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Vendor AR Contact </th>
+          <td mat-cell *matCellDef="let element"> {{ element?.vendorarphonenumber }} </td>
+        </ng-container>
+
+        <!-- Rows -->
+        <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+      </table>
+    </section>
+
+    <hr />
+  </div>
+
+  <!-- Paginator -->
   <div class="paginator">
-    <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
-            [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-            [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
-            [pageIndex]="pageIndex" aria-label="Select page">
-        </mat-paginator>
+    <mat-paginator
+      #paginator
+      [length]="length"
+      [pageSize]="pageSize"
+      [pageIndex]="pageIndex"
+      [pageSizeOptions]="pageSizeOptions"
+      [showFirstLastButtons]="showFirstLastButtons"
+      [hidePageSize]="hidePageSize"
+      (page)="handlePageEvent($event)">
+    </mat-paginator>
   </div>
 </div>
